Updating VarFormatter with a slightly performance improvement for float formatting. Improved compliance for float formatting. Code simplification for VarFormatter. Added tests.